objects/T1333__c.object
<CustomObject>
    <fields>
        <fullName>Test1__c</fullName>
        <label>Test1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Test2__c</fullName>
        <description>for  testing ticket1333</description>
        <label>Test2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
                <value>
                    <fullName>Value2</fullName>
                </value>
                <value>
                    <fullName>Value3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test3__c</fullName>
        <label>Test3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TextField__c</fullName>
        <label>TextField</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>T1333_1</label>
    <nameField>
        <label>T1333 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T1333_1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>